added detail expansion to list items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="rock_and_boulder">Rock and Boulder</string>
     <string name="back_button">Back</string>
     <string name="drawer_icon_description">Menu navigation button</string>
+    <string name="expand_button_content_description">See symbol description</string>
 
     <string name="reentrant_name">Re-entrant</string>
     <string name="reentrant_description">A contour indentation; a valley; the opposite of a spur.</string>
