formatted style of nav drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,16 @@
 <resources>
     <string name="app_name">OrienteeringSymbols</string>
-    <string name="list">List</string>
+    <string name="app_title">Orienteering Symbols</string>
+    <string name="list">Symbols List</string>
     <string name="drawer_list_description">List navigation button</string>
-    <string name="grid">Grid</string>
+    <string name="grid">Symbols Grid</string>
     <string name="drawer_grid_description">Grid navigation button</string>
-    <string name="landforms">Landforms</string>
-    <string name="rock_and_boulder">Rock and Boulder</string>
     <string name="back_button">Back</string>
     <string name="drawer_icon_description">Menu navigation button</string>
     <string name="expand_button_content_description">See symbol description</string>
+
+    <string name="landforms">Landforms</string>
+    <string name="rock_and_boulder">Rock and Boulder</string>
 
     <string name="reentrant_name">Re-entrant</string>
     <string name="reentrant_description">A contour indentation; a valley; the opposite of a spur.</string>
@@ -18,6 +20,4 @@
     <string name="cliff_description">A cliff or rock face. May be passable or impassable.</string>
     <string name="boulder">Boulder</string>
     <string name="boulder_description">A prominent free-standing block of rock or stone.</string>
-
-    <string name="title_activity_main_screen">MainScreen</string>
 </resources>
