--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,17 @@
 <resources>
     <string name="app_name">OrienteeringSymbols</string>
     <string name="app_title">Orienteering Symbols</string>
-    <string name="list">Symbols List</string>
+    <string name="list">Symbol List</string>
     <string name="drawer_list_description">List navigation button</string>
-    <string name="grid">Symbols Grid</string>
+    <string name="grid">Symbol Grid</string>
     <string name="drawer_grid_description">Grid navigation button</string>
+    <string name="description">Control Description</string>
+    <string name="drawer_description_description">Control description button</string>
     <string name="back_button">Back</string>
     <string name="drawer_icon_description">Menu navigation button</string>
     <string name="expand_button_content_description">See symbol description</string>
+    <string name="example_control_description">Example Control Description</string>
+    <string name="example_control_description_labeled">Example Labeled Control Description</string>
 
     <string name="landforms">Landforms</string>
     <string name="rock_and_boulder">Rock and Boulder</string>
@@ -110,15 +114,6 @@
     <string name="south_eastern_name">South Eastern</string>
     <string name="south_outside_corner_name">South Outside Corner</string>
     <string name="south_west_tip_name">South West Tip</string>
-    <string name="special1_name">Special1</string>
-    <string name="special2_name">Special2</string>
-    <string name="special3_name">Special3</string>
-    <string name="special4_name">Special4</string>
-    <string name="special5_name">Special5</string>
-    <string name="special6_name">Special6</string>
-    <string name="special7_name">Special7</string>
-    <string name="special8_name">Special8</string>
-    <string name="special9_name">Special9</string>
     <string name="spring_name">Spring</string>
     <string name="spur_name">Spur</string>
     <string name="stairway_name">Stairway</string>
@@ -246,6 +241,39 @@
     <string name="waterhole_description">A water-filled pit or depression.</string>
     <string name="well_description">A shaft containing water or a captive spring, clearly visible on the ground. Often with some form of man-made surround.</string>
     <string name="west_part_description">Used where the feature extends over a significant area and the control is located neither at the centre, nor on any of the edges; e.g. Marsh, west part; Depression, south east part.</string>
+
+    <string name="con_des_intro">The control description sheet lists details of the course and of each control. Each control description is intended to provide details of the flagged feature which are not provided by the map, and to distinguish where the control is placed in relation to the feature.\n\nA sample control description sheet is shown below.</string>
+    <string name="con_des_columns">Each column of a control description provides details on a particular aspect of the control or feature.</string>
+    <string name="con_des_columns_description">Control Description Columns</string>
+    <string name="con_des_A_title">Column A - Control number</string>
+    <string name="con_des_A_body">Numbering of controls is in the sequence they are to be visited, unless the description is for a Score competition in which case this column is usually either left blank or indicates the control value.</string>
+    <string name="con_des_B_title">Column B – Control code</string>
+    <string name="con_des_B_body">The control code should be a number greater than 30.</string>
+    <string name="con_des_C_title">Column C – Which of any similar feature</string>
+    <string name="con_des_C_body">This column may be used when there is more than one similar feature within the control circle; e.g. south eastern.</string>
+    <string name="con_des_D_title">Column D – Control feature</string>
+    <string name="con_des_D_body">The feature, as shown on the map, at the centre of the circle defining the control site; e.g. clearing; boulder. Most of these are cross referenced to the ISOM 2017 (International Specification for Orienteering Maps) symbol used to represent them.</string>
+    <string name="con_des_E_title">Column E – Appearance</string>
+    <string name="con_des_E_body">Further information on the nature of the feature if it is required; e.g. overgrown; ruined. In certain circumstances also used for a second control feature where the description requires this i.e. crossing; junction; between.</string>
+    <string name="con_des_F_title">Column F – Dimensions / Combinations / Bend</string>
+    <string name="con_des_F_body">Dimensions of the feature should be given where the size of the control feature on the map is symbolic rather than to scale. Also used for the two combination symbols (crossing; junction), and the Bend symbol.</string>
+    <string name="con_des_G_title">Column G – Location of the control flag</string>
+    <string name="con_des_G_body">Position of the control flag with respect to the feature; e.g. west corner (outside); south foot.</string>
+    <string name="con_des_H_title">Column H – Other information</string>
+    <string name="con_des_H_body">Other information that may be of importance to the competitor; e.g. first aid; refreshments.</string>
+    <string name="con_des_start_title">Distance from Timed Start to the Start Triangle</string>
+    <string name="con_des_start_body">This is an optional line showing the distance to the start triangle from the point of the timed start. This will typically be required for an arena start, or when there is a long run out to the start triangle. It is not required if the start triangle is near to the point where the timing starts.</string>
+    <string name="con_des_spec_title">Route Details</string>
+    <string name="con_des_spec_body">These lines go in the body of the descriptions and give specific information about the nature of the route that must be followed at that point.</string>
+    <string name="con_des_S1_body">Distance to the start triangle from the point of the timed start.</string>
+    <string name="con_des_S2_body">Follow Taped Route, 120m away from control.</string>
+    <string name="con_des_S3_body">Follow Taped Route, 80m between controls.</string>
+    <string name="con_des_S4_body">Mandatory crossing point or points. </string>
+    <string name="con_des_S5_body">Mandatory passage through out of bounds area.</string>
+    <string name="con_des_S6_body">Follow Taped Route, 60m to Map Exchange.</string>
+    <string name="con_des_S7_body">170m from last control to Finish. Follow taped route. </string>
+    <string name="con_des_S8_body">130m from last control to Finish. Navigate to finish funnel, then follow tapes.</string>
+    <string name="con_des_S9_body">220m from last control to Finish. Navigate to finish. No tapes.</string>
 
 
 </resources>
