corrected symbol names and added dimensional symbols

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,9 @@
     <string name="differentiator">Differentiator</string>
     <string name="prominent_feature">Prominent Feature</string>
     <string name="shape">Shape</string>
+    <string name="dimensions">Dimensions</string>
 
-    <string name="ant_hill_name">Ant Hill</string>
+    <string name="ant_hill_name">Ant Hill (termite mound)</string>
     <string name="bare_rock_name">Bare Rock</string>
     <string name="bend_name">Bend</string>
     <string name="beneath_name">Beneath</string>
@@ -36,27 +37,28 @@
     <string name="broad_leaved_name">Broad Leaved</string>
     <string name="broken_ground_name">Broken Ground</string>
     <string name="building_name">Building</string>
-    <string name="canopy_name">Building Pass Through</string>
-    <string name="cairn_name">Cairn</string>
+    <string name="building_pass_through_name">Building Pass Through</string>
+    <string name="cairn_name">Cairn, Boundary Stone</string>
+    <string name="canopy_name">Canopy</string>
     <string name="cave_name">Cave</string>
-    <string name="charcoal_burner_name">Charcoal Burner</string>
+    <string name="charcoal_burner_name">Charcoal Burning Ground, Platform</string>
     <string name="clearing_name">Clearing</string>
-    <string name="cliff_name">Cliff</string>
+    <string name="cliff_name">Cliff, Crag</string>
     <string name="copse_name">Copse</string>
     <string name="crossing_name">Crossing</string>
     <string name="crossing_point_name">Crossing Point</string>
     <string name="deep_name">Deep</string>
     <string name="depression_name">Depression</string>
-    <string name="ditch_name">Ditch</string>
+    <string name="ditch_name">Ditch, Minor Water Channel</string>
     <string name="earth_bank_name">Earth Bank</string>
     <string name="earth_wall_name">Earth Wall</string>
-    <string name="east_inside_corner_name">East Inside Corner</string>
+    <string name="east_inside_corner_name">East Corner (inside)</string>
     <string name="erosion_gully_name">Erosion Gully</string>
     <string name="fence_name">Fence</string>
     <string name="firm_ground_in_marsh_name">Firm Ground In Marsh</string>
-    <string name="first_aid_name">First Aid</string>
+    <string name="first_aid_name">First Aid Post</string>
     <string name="fodder_rack_name">Fodder Rack</string>
-    <string name="foot_name">Foot</string>
+    <string name="foot_name">Foot (no direction)</string>
     <string name="forest_corner_name">Forest Corner</string>
     <string name="hill_name">Hill</string>
     <string name="junction_name">Junction</string>
@@ -70,7 +72,7 @@
     <string name="marsh_name">Marsh</string>
     <string name="marshy_name">Marshy</string>
     <string name="middle_name">Middle</string>
-    <string name="monument_name">Monument</string>
+    <string name="monument_name">Monument, Statue</string>
     <string name="narrow_marsh_name">Narrow Marsh</string>
     <string name="narrow_passage_name">Narrow Passage</string>
     <string name="needle_leaved_name">Needle Leaved</string>
@@ -82,25 +84,25 @@
     <string name="open_name">Open</string>
     <string name="out_of_bounds_name">Out Of Bounds</string>
     <string name="overgrown_name">Overgrown</string>
-    <string name="path_name">Path</string>
+    <string name="path_name">Path, Track</string>
     <string name="paved_area_name">Paved Area</string>
-    <string name="pipeline_name">Pipeline</string>
+    <string name="pipeline_name">Pipeline, Bobsleigh/Skeleton Track</string>
     <string name="pit_name">Pit</string>
     <string name="pond_name">Pond</string>
     <string name="power_line_name">Power Line</string>
     <string name="power_line_pylon_name">Power Line Pylon</string>
-    <string name="prominent_feature_o_name">Prominent Feature O</string>
-    <string name="prominent_feature_x_name">Prominent Feature X</string>
+    <string name="prominent_feature_o_name">Prominent Feature, Special Item</string>
+    <string name="prominent_feature_x_name">Prominent Feature, Special Item</string>
     <string name="prominent_tree_name">Prominent Tree</string>
     <string name="quarry_name">Quarry</string>
     <string name="reentrant_name">Re-entrant</string>
-    <string name="refreshment_name">Refreshment</string>
+    <string name="refreshment_name">Refreshment Point</string>
     <string name="ride_name">Ride</string>
-    <string name="river_name">River</string>
+    <string name="river_name">River, Stream, Watercourse</string>
     <string name="road_name">Road</string>
     <string name="rock_pillar_name">Rock Pillar</string>
-    <string name="rocky_name">Rocky</string>
-    <string name="root_stock_name">Root Stock</string>
+    <string name="rocky_name">Rocky, Stony</string>
+    <string name="root_stock_name">Root Stock, Tree Stump</string>
     <string name="ruin_name">Ruin</string>
     <string name="ruined_name">Ruined</string>
     <string name="saddle_name">Saddle</string>
@@ -112,7 +114,7 @@
     <string name="small_erosion_gully_name">Small Erosion Gully</string>
     <string name="south_east_edge_name">South East Edge</string>
     <string name="south_eastern_name">South Eastern</string>
-    <string name="south_outside_corner_name">South Outside Corner</string>
+    <string name="south_outside_corner_name">South Corner (outside)</string>
     <string name="south_west_tip_name">South West Tip</string>
     <string name="spring_name">Spring</string>
     <string name="spur_name">Spur</string>
@@ -121,17 +123,23 @@
     <string name="terrace_name">Terrace</string>
     <string name="thicket_name">Thicket</string>
     <string name="top_name">Top</string>
-    <string name="tower_name">Tower</string>
+    <string name="tower_name">Tower, Pylon</string>
     <string name="trench_name">Trench</string>
     <string name="tunnel_name">Tunnel</string>
     <string name="upper_name">Upper</string>
     <string name="upper_part_name">Upper Part</string>
     <string name="vegetation_boundary_name">Vegetation Boundary</string>
     <string name="wall_name">Wall</string>
-    <string name="water_tank_name">Water Tank</string>
+    <string name="water_tank_name">Water Tank, Water Trough</string>
     <string name="waterhole_name">Waterhole</string>
     <string name="well_name">Well</string>
     <string name="west_part_name">West Part</string>
+    <string name="height_or_depth_name">Height or Depth</string>
+    <string name="size_name">Size</string>
+    <string name="height_on_slope_name">Height on Slope</string>
+    <string name="height_two_features_name">Height of Two Features</string>
+
+
 
     <string name="ant_hill_description">The mound made by ants or termites.</string>
     <string name="bare_rock_description">A runnable area of rock with no earth or vegetation cover. </string>
@@ -241,6 +249,10 @@
     <string name="waterhole_description">A water-filled pit or depression.</string>
     <string name="well_description">A shaft containing water or a captive spring, clearly visible on the ground. Often with some form of man-made surround.</string>
     <string name="west_part_description">Used where the feature extends over a significant area and the control is located neither at the centre, nor on any of the edges; e.g. Marsh, west part; Depression, south east part.</string>
+    <string name="height_or_depth_description">Height or Depth of the feature in metres.</string>
+    <string name="size_description">Horizontal dimensions of the feature in metres.</string>
+    <string name="height_on_slope_description">Height of the feature on a slope in metres.</string>
+    <string name="height_two_features_description">Heights of two features with the control between them.</string>
 
     <string name="con_des_intro">The control description sheet lists details of the course and of each control. Each control description is intended to provide details of the flagged feature which are not provided by the map, and to distinguish where the control is placed in relation to the feature.\n\nA sample control description sheet is shown below.</string>
     <string name="con_des_columns">Each column of a control description provides details on a particular aspect of the control or feature.</string>
