shortened some names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="cairn_name">Cairn, Boundary Stone</string>
     <string name="canopy_name">Canopy</string>
     <string name="cave_name">Cave</string>
-    <string name="charcoal_burner_name">Charcoal Burning Ground, Platform</string>
+    <string name="charcoal_burner_name">Charcoal Burner, Platform</string>
     <string name="clearing_name">Clearing</string>
     <string name="cliff_name">Cliff, Crag</string>
     <string name="copse_name">Copse</string>
@@ -49,7 +49,7 @@
     <string name="crossing_point_name">Crossing Point</string>
     <string name="deep_name">Deep</string>
     <string name="depression_name">Depression</string>
-    <string name="ditch_name">Ditch, Minor Water Channel</string>
+    <string name="ditch_name">Ditch</string>
     <string name="earth_bank_name">Earth Bank</string>
     <string name="earth_wall_name">Earth Wall</string>
     <string name="east_inside_corner_name">East Corner (inside)</string>
@@ -86,19 +86,19 @@
     <string name="overgrown_name">Overgrown</string>
     <string name="path_name">Path, Track</string>
     <string name="paved_area_name">Paved Area</string>
-    <string name="pipeline_name">Pipeline, Bobsleigh/Skeleton Track</string>
+    <string name="pipeline_name">Pipeline</string>
     <string name="pit_name">Pit</string>
     <string name="pond_name">Pond</string>
     <string name="power_line_name">Power Line</string>
     <string name="power_line_pylon_name">Power Line Pylon</string>
-    <string name="prominent_feature_o_name">Prominent Feature, Special Item</string>
-    <string name="prominent_feature_x_name">Prominent Feature, Special Item</string>
+    <string name="prominent_feature_o_name">Prominent Feature</string>
+    <string name="prominent_feature_x_name">Prominent Feature</string>
     <string name="prominent_tree_name">Prominent Tree</string>
     <string name="quarry_name">Quarry</string>
     <string name="reentrant_name">Re-entrant</string>
     <string name="refreshment_name">Refreshment Point</string>
     <string name="ride_name">Ride</string>
-    <string name="river_name">River, Stream, Watercourse</string>
+    <string name="river_name">River, Stream</string>
     <string name="road_name">Road</string>
     <string name="rock_pillar_name">Rock Pillar</string>
     <string name="rocky_name">Rocky, Stony</string>
@@ -130,7 +130,7 @@
     <string name="upper_part_name">Upper Part</string>
     <string name="vegetation_boundary_name">Vegetation Boundary</string>
     <string name="wall_name">Wall</string>
-    <string name="water_tank_name">Water Tank, Water Trough</string>
+    <string name="water_tank_name">Water Tank, Trough</string>
     <string name="waterhole_name">Waterhole</string>
     <string name="well_name">Well</string>
     <string name="west_part_name">West Part</string>
@@ -156,7 +156,7 @@
     <string name="cairn_description">A man made stone or pile of stones. A cairn, memorial stone, boundary stone or trigonometric point.</string>
     <string name="canopy_description">An accessible area with a roof. A canopy or a covered passageway through a building. </string>
     <string name="cave_description">A hole in a rock face or hill side, often leading to underground workings.</string>
-    <string name="charcoal_burner_description">The clear remains of an area where charcoal was burned. A small level man made area on a slope (a platform).</string>
+    <string name="charcoal_burner_description">The clear remains of an area where charcoal was burned. \n\nA small level man made area on a slope (a platform).</string>
     <string name="clearing_description">A small area of land free from trees within the forest.</string>
     <string name="cliff_description">A cliff or rock face. May be passable or impassable.</string>
     <string name="copse_description">A small area of trees in open ground.</string>
