--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -289,7 +289,6 @@
     <string name="con_des_S8_body">130m from last control to Finish. Navigate to finish funnel, then follow tapes.</string>
     <string name="con_des_S9_body">220m from last control to Finish. Navigate to finish. No tapes.</string>
 
-    <string name="instruction_body"></string>
-    <string name="credit_body"></string>
+    <string name="credit_body">Control description information is from the International Orienteering Federation (IOF) International Specification for Control Descriptions – 2018. Further information can be found at http://www.orienteering.org.</string>
 
 </resources>
