--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="prominent_feature_x_name">Prominent Feature</string>
     <string name="prominent_tree_name">Prominent Tree</string>
     <string name="quarry_name">Quarry</string>
+    <string name="railway_name">Railway</string>
     <string name="reentrant_name">Re-entrant</string>
     <string name="refreshment_name">Refreshment Point</string>
     <string name="ride_name">Ride</string>
@@ -143,7 +144,7 @@
     <string name="ant_hill_description">The mound made by ants or termites.</string>
     <string name="bare_rock_description">A runnable area of rock with no earth or vegetation cover. </string>
     <string name="bend_description">Used where a linear feature makes a smooth change of direction; e.g. Path bend; River bend.</string>
-    <string name="beneath_description">Where the control is located underneath the feature; e.g. Pipeline, beneath.</string>
+    <string name="beneath_description">Where the control is located underneath the feature; e.g. Pipeline, beneath. The lower of two levels.</string>
     <string name="between_description">Where the control is located between two features; e.g. Between thickets; Between boulder and knoll.</string>
     <string name="boulder_cluster_description">A small distinct group of boulders so closely clustered together that they cannot be individually mapped.</string>
     <string name="boulder_description">A prominent free-standing block of rock or stone.</string>
@@ -151,14 +152,14 @@
     <string name="bridge_description">A crossing point over a watercourse or other linear feature.</string>
     <string name="broad_leaved_description">Where the tree or trees associated with the control feature are broad-leaved; e.g. Copse, broad leaved.</string>
     <string name="broken_ground_description">Clearly disturbed ground with features too small or too numerous to be mapped individually; including animal earths.</string>
-    <string name="building_description">A standing brick, wood or stone structure.</string>
+    <string name="building_description">A man-made structure. Typically of brick, wood or stone. A pillar supporting a roof.</string>
     <string name="cairn_description">A man made stone or pile of stones. A cairn, memorial stone, boundary stone or trigonometric point.</string>
     <string name="canopy_description">An accessible area with a roof. A canopy or a covered passageway through a building. </string>
     <string name="cave_description">A hole in a rock face or hill side, often leading to underground workings.</string>
     <string name="charcoal_burner_description">The clear remains of an area where charcoal was burned. \n\nA small level man made area on a slope (a platform).</string>
     <string name="clearing_description">A small area of land free from trees within the forest.</string>
     <string name="cliff_description">A cliff or rock face. May be passable or impassable.</string>
-    <string name="copse_description">A small area of trees in open ground.</string>
+    <string name="copse_description">A small area of trees in open ground or a more runnable area of trees surrounded by thicker forest.</string>
     <string name="crossing_description">The point at which two linear features cross.</string>
     <string name="crossing_point_description">A way through or over a wall, fence, or other linear feature, including a gate or stile.</string>
     <string name="deep_description">Where the control feature is particularly deep but this is not indicated on the map; e.g. Pit, deep.</string>
@@ -209,6 +210,7 @@
     <string name="prominent_feature_x_description">If used, an explanation of its meaning must be supplied to competitors in the pre-race information.</string>
     <string name="prominent_tree_description">An unusual or prominent tree in either open land or forest; frequently information is also given as to its type.</string>
     <string name="quarry_description">Gravel, sand or stone working in flat or inclined ground.</string>
+    <string name="railway_description">A railway, tramway, or other kind of railed track.</string>
     <string name="reentrant_description">A contour indentation; a valley; the opposite of a spur.</string>
     <string name="refreshment_description">Control site where Refreshments are available.</string>
     <string name="ride_description">A forest ride or a prominent trace through the terrain which does not have a distinct runnable path along it.</string>
@@ -236,7 +238,7 @@
     <string name="stony_ground_description">An area covered with many small stones or rocks.</string>
     <string name="terrace_description">A level area on a slope.</string>
     <string name="thicket_description">A small area of forest where the tree cover or undergrowth is so dense that it is difficult to pass. May also be used for an individual bush (typically in Sprint competitions).</string>
-    <string name="top_description">Where the control is located at the highest point of the feature and this is not the default location; e.g. Cliff, top; Stairway, top.</string>
+    <string name="top_description">Where the control is located at the highest point of the feature and this is not the default location; e.g. Cliff, top; Stairway, top. The upper of two levels.</string>
     <string name="tower_description">A metal, wooden or brick tower or pylon.</string>
     <string name="trench_description">A rocky or artificial trench.</string>
     <string name="tunnel_description">A way under roads, railways, etc.</string>
@@ -285,7 +287,8 @@
     <string name="con_des_S7_body">170m from last control to Finish. Follow taped route. </string>
     <string name="con_des_S8_body">130m from last control to Finish. Navigate to finish funnel, then follow tape.</string>
     <string name="con_des_S9_body">220m from last control to Finish. Navigate to finish. No tape.</string>
+    <string name="con_des_S10_body">Map flip (turn the map over)</string>
 
-    <string name="credit_body">Control description information is from the International Orienteering Federation (IOF) International Specification for Control Descriptions – 2018. Further information can be found at http://www.orienteering.org.</string>
+    <string name="credit_body">Control description information is from the International Orienteering Federation (IOF) International Specification for Control Descriptions – 2024. Further information can be found at http://www.orienteering.org.</string>
 
 </resources>
